--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,7 @@
     "express": "^4.17.1",
     "express-jwt": "^6.0.0",
     "jsonwebtoken": "^8.5.1",
+    "moment": "^2.29.1",
     "mongoose": "^5.11.11"
   },
   "devDependencies": {
